--- a/AdaptiveHost/AdaptiveHost settings.json
+++ b/AdaptiveHost/AdaptiveHost settings.json
@@ -1,1 +1,1 @@
-{"UserConfigs":{"only_focus_project":false,"add_markers":false,"tooltips":false,"compensate":2},"GuiSettings":{"Pin":true,"docked":0},"Version":"1.0.1"}
+{"UserConfigs":{"compensate":2,"tooltips":false,"add_markers":false,"only_focus_project":false},"GuiSettings":{"Pin":true,"docked":0},"Version":"1.0.1"}
