--- a/Scatterer/scatterer settings.json
+++ b/Scatterer/scatterer settings.json
@@ -1,1 +1,1 @@
-{"Version":"1.0.1","UserConfigs":{"compensate":2,"tooltips":false,"add_markers":false,"only_focus_project":false},"GuiSettings":{"Pin":true,"docked":0}}
+{"UserConfigs":{"tooltips":false,"only_focus_project":false,"compensate":2,"add_markers":false},"Version":"1.0.1","GuiSettings":{"docked":0,"Pin":true}}
