--- a/Scatterer/scatterer settings.json
+++ b/Scatterer/scatterer settings.json
@@ -1,1 +1,1 @@
-{"GuiSettings":{"Pin":true,"docked":0},"Version":"1.0.1","UserConfigs":{"compensate":2,"add_markers":false,"tooltips":false,"only_focus_project":false}}
+{"GuiSettings":{"docked":0,"Pin":true},"Version":"1.0.1","UserConfigs":{"add_markers":false,"only_focus_project":false,"tooltips":false,"compensate":2}}
