added initial note selection to sampler

--- a/Scatterer/scatterer settings.json
+++ b/Scatterer/scatterer settings.json
@@ -1,1 +1,1 @@
-{"UserConfigs":{"compensate":2,"add_markers":false,"only_focus_project":false,"tooltips":false},"GuiSettings":{"Pin":true,"docked":0},"Version":"1.0.1"}
+{"UserConfigs":{"tooltips":false,"compensate":2,"only_focus_project":false,"add_markers":false},"Version":"1.0.1","GuiSettings":{"docked":0,"Pin":false}}
