added name with note to sample track

--- a/Scatterer/scatterer settings.json
+++ b/Scatterer/scatterer settings.json
@@ -1,1 +1,1 @@
-{"UserConfigs":{"tooltips":false,"compensate":2,"only_focus_project":false,"add_markers":false},"Version":"1.0.1","GuiSettings":{"docked":0,"Pin":false}}
+{"GuiSettings":{"Pin":false,"docked":0},"Version":"1.0.1","UserConfigs":{"tooltips":false,"add_markers":false,"only_focus_project":false,"compensate":2}}
