--- a/Scatterer/scatterer settings.json
+++ b/Scatterer/scatterer settings.json
@@ -1,1 +1,1 @@
-{"GuiSettings":{"Pin":false,"docked":0},"Version":"1.0.1","UserConfigs":{"tooltips":false,"add_markers":false,"only_focus_project":false,"compensate":2}}
+{"UserConfigs":{"add_markers":false,"tooltips":false,"compensate":2,"only_focus_project":false},"Version":"1.0.1","GuiSettings":{"Pin":false,"docked":0}}
