--- a/ReaGoTo/ReaGoTo Settings.json
+++ b/ReaGoTo/ReaGoTo Settings.json
@@ -1,1 +1,1 @@
-{"SmoothSeekTime":0.35,"Version":"1.0.2","GuiSettings":{"Pin":true,"docked":0},"UserConfigs":{"trigger_when_paused":true,"compensate":2,"add_markers":false,"tooltips":false,"only_focus_project":false}}
+{"SmoothSeekTime":0.35,"Version":"1.0.2","UserConfigs":{"only_focus_project":false,"tooltips":false,"trigger_when_paused":true,"compensate":2,"add_markers":false},"GuiSettings":{"Pin":true,"docked":0}}
