--- a/ReaGoTo/ReaGoTo Settings.json
+++ b/ReaGoTo/ReaGoTo Settings.json
@@ -1,1 +1,1 @@
-{"SmoothSeekTime":0.35,"Version":"1.0.2","UserConfigs":{"only_focus_project":false,"tooltips":false,"trigger_when_paused":true,"compensate":2,"add_markers":false},"GuiSettings":{"Pin":true,"docked":0}}
+{"UserConfigs":{"only_focus_project":false,"compensate":2,"tooltips":false,"add_markers":false,"trigger_when_paused":true},"SmoothSeekTime":0.35,"Version":"1.0.2","GuiSettings":{"Pin":true,"docked":0}}
