--- a/Scatterer/scatterer settings.json
+++ b/Scatterer/scatterer settings.json
@@ -1,1 +1,1 @@
-{"UserConfigs":{"add_markers":false,"tooltips":false,"compensate":2,"only_focus_project":false},"Version":"1.0.1","GuiSettings":{"Pin":false,"docked":0}}
+{"GuiSettings":{"Pin":false,"docked":0},"UserConfigs":{"add_markers":false,"compensate":2,"tooltips":false,"only_focus_project":false},"Version":"1.0.1"}
