--- a/AdaptiveHost/AdaptiveHost settings.json
+++ b/AdaptiveHost/AdaptiveHost settings.json
@@ -1,1 +1,1 @@
-{"Version":"1.0.1","UserConfigs":{"add_markers":false,"compensate":2,"tooltips":false,"only_focus_project":false},"GuiSettings":{"Pin":false,"docked":0}}
+{"UserConfigs":{"compensate":2,"add_markers":false,"only_focus_project":false,"tooltips":false},"Version":"1.0.1","GuiSettings":{"docked":0,"Pin":false}}
