--- a/AdaptiveHost/AdaptiveHost settings.json
+++ b/AdaptiveHost/AdaptiveHost settings.json
@@ -1,1 +1,1 @@
-{"UserConfigs":{"compensate":2,"add_markers":false,"only_focus_project":false,"tooltips":false},"Version":"1.0.1","GuiSettings":{"docked":0,"Pin":false}}
+{"UserConfigs":{"add_markers":false,"compensate":2,"only_focus_project":false,"tooltips":false},"Version":"1.0.1","GuiSettings":{"docked":0,"Pin":false}}
