--- a/Scatterer/scatterer settings.json
+++ b/Scatterer/scatterer settings.json
@@ -1,1 +1,1 @@
-{"GuiSettings":{"Pin":false,"docked":0},"UserConfigs":{"add_markers":false,"compensate":2,"tooltips":false,"only_focus_project":false},"Version":"1.0.1"}
+{"Version":"1.0.1","UserConfigs":{"compensate":2,"add_markers":false,"only_focus_project":false,"tooltips":false},"GuiSettings":{"Pin":false,"docked":0}}
