--- a/AdaptiveHost/AdaptiveHost settings.json
+++ b/AdaptiveHost/AdaptiveHost settings.json
@@ -1,1 +1,1 @@
-{"UserConfigs":{"add_markers":false,"compensate":2,"only_focus_project":false,"tooltips":false},"Version":"1.0.1","GuiSettings":{"docked":0,"Pin":false}}
+{"GuiSettings":{"Pin":false,"docked":0},"Version":"1.0.1","UserConfigs":{"add_markers":false,"tooltips":false,"only_focus_project":false,"compensate":2}}
