--- a/LayersV2/Layers Settings.json
+++ b/LayersV2/Layers Settings.json
@@ -1,1 +1,1 @@
-{"UserConfigs":{"only_focus_project":false,"tooltips":false},"Version":"1.0.1","GuiSettings":{"Pin":false,"docked":0}}
+{"UserConfigs":{"tooltips":false,"only_focus_project":false},"GuiSettings":{"Pin":false,"docked":0},"Version":"1.0.1"}
