--- a/ReaGoTo/ReaGoTo Settings.json
+++ b/ReaGoTo/ReaGoTo Settings.json
@@ -1,5 +1,1 @@
-<<<<<<< Updated upstream
-{"Version":"1.0.2","GuiSettings":{"Pin":true,"docked":0},"SmoothSeekTime":0.35,"UserConfigs":{"only_focus_project":false,"tooltips":false,"trigger_when_paused":true,"compensate":2,"add_markers":false}}
-=======
-{"GuiSettings":{"Pin":true,"docked":0},"SmoothSeekTime":0.35,"Version":"1.0.2","UserConfigs":{"add_markers":false,"trigger_when_paused":true,"compensate":2,"only_focus_project":false,"tooltips":false}}
->>>>>>> Stashed changes
+{"SmoothSeekTime":0.35,"GuiSettings":{"Pin":true,"docked":0},"Version":"1.0.2","UserConfigs":{"trigger_when_paused":true,"tooltips":false,"only_focus_project":false,"compensate":2,"add_markers":false}}
