--- a/Scatterer/scatterer settings.json
+++ b/Scatterer/scatterer settings.json
@@ -1,1 +1,1 @@
-{"Version":"1.0.1","GuiSettings":{"docked":0,"Pin":false},"UserConfigs":{"add_markers":false,"only_focus_project":false,"tooltips":false,"compensate":2}}
+{"UserConfigs":{"tooltips":false,"only_focus_project":false,"add_markers":false,"compensate":2},"Version":"1.0.1","GuiSettings":{"Pin":false,"docked":0}}
